# llm-note

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROVENANCE.md  README.md  README_de.md  README_es.md  README_ja.md  README_ru.md  README_zh-Hans.md  RELEASE_GATE.md  SECURITY.md  TODO.md  llms.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: i18n.md
llm_note/: __init__.py  cli.py  i18n.py  store.py
llm_note/locales/: __init__.py  de.json  en.json  es.json  ja.json  ru.json  zh-Hans.json
plugin/: plugin.json
references/bach-export/notizblock/: SKILL.md
references/bach-source/: 019_denkarium.sql  denkarium.py  denkarium_help.txt  test_denkarium_handler.py
skills/llm-note/: SKILL.md
skills/llm-note/agents/: openai.yaml
tests/: test_cli.py  test_i18n.py  test_store.py
