[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "llm-note"
version = "1.0.0"
description = "Local-first notes and notebooks for LLM agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Lukas Geiger" }]
keywords = ["llm", "agents", "notes", "sqlite", "local-first"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
llm-note = "llm_note.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["llm_note"]
